# LangageParallelisme

./: CMakeLists.txt  buildPlafrim.sh  compile_plafrim.sh
src/: master.c  work.c  work.c~  work.h  work.h~  worker.c
src/bruteforce/: bruteforce.c  bruteforce.h  work.c
src/common/: mpi_tags.h  work.c  work.h
src/main/: bench.c  master.c  master_aux.c  test_util.c  worker.c
src/master/: master.c
src/util/: mpi_tags.h  word.c  word.h  work.c  work.h
src/worker/: worker.c
